syntax = "proto3";
package judge;

enum CodeEncodingEnum {
  UTF8 = 0;
  GZIP = 1;
}

message Problem {
  uint32 problem_id = 1;
  uint32 revision = 2;
  uint32 time_limit = 3;
  uint32 memory_limit = 4;
  bool spj = 5;
}

message User {
  uint32 user_id = 1;
}

message Competition {
  uint32 competition_id = 1;
}

message JudgeTask {
  uint32 judge_info_id = 1;
  uint32 solution_id = 2;
  Problem problem = 3;
  User user = 4;
  Competition competition = 5;
  string language = 6;
  CodeEncodingEnum code_encoding = 7;
  bytes code = 8;
}
